footer section completed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,20 @@
 /* common codes start */
-:root{
+:root {
     --primary-color: #87D37C;
     --secondary-color: #FDFAFA;
     --light-color: #FEFBFC;
     --dark-color: #040404;
 }
-html{
+
+html {
     scroll-behavior: smooth;
 }
-.container{
+
+.container {
     min-width: 360px;
 }
 
-.title-block h3{
+.title-block h3 {
     color: var(--dark-color);
     font-weight: 600;
     text-transform: uppercase;
@@ -20,7 +22,7 @@ html{
     margin-bottom: 20px;
 }
 
-.title-block p{
+.title-block p {
     color: var(--dark-color);
     font-size: 14px;
     font-weight: 400;
@@ -31,13 +33,13 @@ html{
 
 .text-justify {
     text-align: justify;
-  }
-  
+}
+
 /* common codes end */
 
 /* header section start */
-#header{
-    background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)) , url(../img/banner.jpg) no-repeat;
+#header {
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../img/banner.jpg) no-repeat;
     background-size: cover;
 }
 
@@ -46,54 +48,57 @@ html{
 #navbar .dropdown-item {
     padding: var(--bs-nav-link-padding-y) 20px;
     font-size: 18px;
-    font-weight:600;
+    font-weight: 600;
     color: var(--light-color);
     text-transform: uppercase;
-    
-    &.active{
+
+    &.active {
         color: var(--primary-color);
     }
-    
-    &:hover{
+
+    &:hover {
         color: var(--primary-color);
     }
 }
 
-#navbar .dropdown-menu{
-    --bs-dropdown-bg:: transparent;
+#navbar .dropdown-menu {
+    --bs-dropdown-bg: : transparent;
 }
 
-.nav-active{
+.nav-active {
     background: rgba(0, 0, 0, 0.5);
 }
+
 /* navbar section end */
 
 /* carousel section start */
 
-#myCarousel h1 span{
+#myCarousel h1 span {
     color: var(--primary-color);
 }
+
 .carousel-indicators [data-bs-target] {
     width: 20px;
     height: 20px;
     border-radius: 50%;
 
-    &.active{
+    &.active {
         background-color: var(--primary-color);
     }
 }
+
 /* carousel section end */
 /* header section end */
 
 /* about_us section start */
 #about_us {}
 
-.about-content a{
+.about-content a {
     color: var(--dark-color);
     text-decoration: none;
     transition: .3s linear;
 
-    &:hover{
+    &:hover {
         color: var(--primary-color);
     }
 }
@@ -103,22 +108,22 @@ html{
 /* about_us section end */
 
 /* services section start */
-.service-content{
+.service-content {
     background: rgba(0, 0, 0, .6);
     /* opacity: 0; */
 
-    &:hover .service-overlay{
+    &:hover .service-overlay {
         opacity: 1;
     }
 }
 
-.service-overlay{
+.service-overlay {
     background: rgba(0, 0, 0, .5);
     opacity: 0;
     transition: .5s;
 }
 
-.service-overlay a{
+.service-overlay a {
     color: var(--light-color);
     border: 1px solid var(--light-color);
     padding: 10px 12px;
@@ -126,49 +131,51 @@ html{
     margin: 5px;
     transition: .3s;
 
-    &:hover{
+    &:hover {
         background: var(--primary-color);
         border: 1px solid var(--primary-color);
     }
 }
+
 /* services section end */
 
 /* portfolio section start */
-.portfolio-links ul li a{
+.portfolio-links ul li a {
     background: var(--dark-color);
     transition: .3s;
 
-    &:hover{
+    &:hover {
         background: var(--primary-color);
     }
 }
 
-.portfolio-content{
+.portfolio-content {
     background: rgba(0, 0, 0, .6);
     /* opacity: 0; */
 
-    &:hover .portfolio-overlay{
+    &:hover .portfolio-overlay {
         opacity: 1;
     }
 }
 
-.portfolio-overlay{
+.portfolio-overlay {
     background: rgba(0, 0, 0, .5);
     opacity: 0;
     transition: .5s;
 }
 
-.portfolio-overlay a{    
+.portfolio-overlay a {
     color: var(--light-color);
 
-    &:hover{
+    &:hover {
         color: var(--primary-color);
     }
 }
+
 /* portfolio section end */
 
 /* pricing section start */
-.pricing-content{
+.pricing-content {
     background: var(--dark-color);
     border-radius: 8px;
     display: flex;
@@ -176,64 +183,89 @@ html{
     align-items: center;
     transition: .5s;
 
-    &:hover{
+    &:hover {
         background: var(--primary-color);
 
-        & .pricing-header{
+        & .pricing-header {
             background: var(--light-color);
             color: var(--primary-color);
         }
     }
 }
 
-.pricing-header{
+.pricing-header {
     height: 150px;
-    width:  150px;
+    width: 150px;
     border-radius: 50%;
     transition: .5s;
 
-    & h3{
+    & h3 {
         font-size: 30px;
     }
-    
-    & h3 sup{
+
+    & h3 sup {
         top: -.7em;
         font-size: 14px;
     }
 
-    & h3 sub{
+    & h3 sub {
         font-size: 20px;
     }
 }
 
-.pricing-body{
-    & li{
+.pricing-body {
+    & li {
         margin-top: 20px;
         padding-bottom: 5px;
         border-bottom: 1px solid var(--light-color);
     }
-    
-    & li p{
+
+    & li p {
         margin: 0;
     }
 
-    & li a{
+    & li a {
         background: var(--light-color);
         color: var(--dark-color);
         transition: .5s;
 
-        &:hover{
+        &:hover {
             color: var(--primary-color);
         }
     }
 
-    & li:last-child{
+    & li:last-child {
         padding-top: 20px;
         border-bottom: 0px solid transparent;
     }
 }
+
 /* pricing section end */
 
- main{
+/* Footer Section Start */
+.footer-text p a {
+    color: var(--light-color);
+    transition: .5s;
+    
+    &:hover {
+        color: var(--primary-color);
+    }
+}
+
+.footer-links a {
+    font-size: 20px;
+    color: var(--light-color);
+    margin-left: 10px;
+    text-decoration: none;
+    transition: .5s;
+
+    &:hover {
+        color: var(--primary-color);
+    }
+}
+
+/* Footer Section End */
+
+main {
     height: 1300px;
-} 
+}
